# random_chess_2.0

./: .gitignore  Dockerfile  README.md  bcolors.py  chess_game.py  chess_login.py  cookies.json  login.json  main.py  moves.py  piece_potential_moves.py  pieces.py  player.py  pyproject.toml  requirements.txt  test.py  traversal.py  validate_url.py
.github/workflows/: django.yml  pylint.yml  python-app.yml
src/: piece_potential_moves.py  traversal.py
src/logins/: _hi.txt
src/random_chess/: __init__.py  __main__.py  chess_game.py  pieces.py  player.py  traversal.py
src/random_chess_2.0/: chess_game.py  main.py  traversal.py
