[tool.poetry]
name = "random chess"
version = "2.0.0"
description = "A bot that plays chess by making random moves"
authors = ["Jeremy Brandow <jampamane@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
rich = "^13.7.1"
selenium = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
