[project]
name = "random-chess-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "rich>=14.1.0",
    "selenium==4.32.0",
]

[project.scripts]
random_chess = "random_chess.__main__:random_chess"

[tool.uv]
package = true
